assets/css/jekyll-theme-chirpy.scss
---
---

/* prettier-ignore */
@use 'main
{%- if jekyll.environment == 'production' -%}
  .bundle
{%- endif -%}
';

/* append your custom style below */

#post-wrapper,
.post-content {
  blockquote {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
  }

  blockquote + hr {
    margin-top: 2rem;
    margin-bottom: 2.25rem;
  }

  hr + blockquote {
    margin-top: 2.25rem;
  }
}

